--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -1,5 +1,40 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix:after {
+  content:"";
+  display: block;
+  clear: both;
+  }
+
+.main-content-box{
+  margin:0 auto;
+  width:940px;
+  background-color:#eff3f4;
+  padding:20px;
+}
+
+.main-content{
+  width:210px;
+  margin:20px;
+  border:10px solid black;
+}
+
+.blue{
+  float:left;
+  margin-left:20px;
+  background-color:#3274ae;
+  
+}
+.blue:first-child{
+  margin-left:0px;
+}
+.text{
+  padding:20px;
+  background-color:#eaf4ff;
+  font-size:16px;
+  line-height:16px;
+}
+
 
 /* 回答はここに書いてね */
