--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -2,38 +2,39 @@
 
 /* 回答はここに書いてね */
 .clearfix:after {
-  content:"";
+  content: "";
   display: block;
   clear: both;
   }
 
-.main-content-box{
-  margin:0 auto;
-  width:940px;
-  background-color:#eff3f4;
-  padding:20px;
+.main-content-box {
+  margin: 0 auto;
+  width: 900px;
+  background-color: #eff3f4;
+  padding: 20px;
 }
 
-.main-content{
-  width:210px;
-  margin:20px;
-  border:10px solid black;
+.main-content {
+  width: 210px;
+  margin: 20px;
+  border: 10px solid #022336;
 }
 
-.blue{
-  float:left;
-  margin-left:20px;
-  background-color:#3274ae;
-  
+.blue {
+  float: left;
+  margin-left: 20px;
+  background-color: #3274ae;  
 }
-.blue:first-child{
-  margin-left:0px;
+
+.blue:first-child {
+  margin-left: 0px;
 }
-.text{
-  padding:20px;
-  background-color:#eaf4ff;
-  font-size:16px;
-  line-height:16px;
+
+.text {
+  padding: 20px;
+  background-color: #eaf4ff;
+  font-size: 16px;
+  line-height: 16px;
 }
 
 
