--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -1,45 +1,55 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-.main-wrapper{
-  background-color:#ecf1f2;
-  padding:20px;
+.main-wrapper {
+  background-color: #ecf1f2;
+  padding: 20px;
 }
-.main-box{
-  display:table;
-  width:100%;
-}
-.main-box:last-child{
-  margin-top:20px;
-}
-.text{
-  text-align:center;
-}
-.div-style{
-  padding:20px;
-  display:table-cell;
-}
-.div1-1{
 
-  background-color:#fdc8b8;
-  width:100px;
-  
+.main-box {
+  display: table;
+  width: 100%;
+  margin-top: 20px;
 }
-.div1-2{
-  background-color:#e0abd9;
+
+.main-box:first-child {
+  margin-top: 0px;
 }
-.div1-3{
-  background-color:#b6d8ed;
-  width:100px;
+
+.text {
+  text-align: center;
 }
-.div2-1{
-  background-color:#e5d32e;
+
+.div-style {
+  padding: 20px;
+  display: table-cell;
+} 
+
+.daidai {
+  background-color: #fdc8b8;
+  width: 100px ;
 }
-.div2-2{
-  background-color:#ec8f9a;
+
+.pink{
+  background-color: #e0abd9;
 }
-.div2-3{
-  background-color:#8fdcad;
-  width:500px;
+
+.skyblue{
+  background-color: #b6d8ed;
+  width: 100px;
 }
+
+.yellow{
+  background-color: #e5d32e;
+}
+
+.momo{
+  background-color: #ec8f9a;
+}
+
+.green{
+  background-color: #8fdcad;
+  width: 500px;
+}
+
 /* 回答はここに書いてね */
