--- a/layout_parts/q7/css/style.css
+++ b/layout_parts/q7/css/style.css
@@ -4,10 +4,11 @@
 .float-left {
   float: left;
   width: 205px;
-  margin-left:50px;
+  margin-left: 50px;
 }
-.float-left:first-child{
-  margin-left:0px;
+
+.float-left:first-child {
+  margin-left: 0px;
 }
 
 .clearfix::after {
@@ -17,31 +18,41 @@
 }
                       /* テーブルでの横並び */
 .q7box-parent {
-  width:500px;
+  width: 500px;
   display: table;
 }
+
 .q7box {
-  width:225px;
-  padding-left:50px;
+  width: 225px;
+  padding-left:  50px;
   display: table-cell;
   vertical-align: middle;
 }
-.q7box:first-child{
-  padding-left:0px;
+
+.q7box:first-child {
+  padding-left: 0px;
+}
+                      /* インラインブロックでの横並び */
+.inline-parent {
+ font-size: 0;
 }
 
-                      /* インラインブロックでの横並び */
 .q7-inline-box {
   display: inline-block;
   width: 41%;
-  margin-left: 45px;
-  /* padding-right:2px; */
+  margin-left: 51px;
+  margin-right: -0.6px;
   vertical-align: middle;
+  font-size: 16px;
 }
+
 .q7-inline-box:first-child {
   margin-left: 0px;
 }
 
+.q7-inline-box:last-child {
+  padding-left: 9.7px;
+}
                           /* フレックスでの横並び */
 .q7-flex-parent {
   display: flex;
@@ -53,38 +64,17 @@
   align-self: flex-end;
 }
 
-.inline-margin-parent {
-
-}
 .inline-margin-left {
-  display:inline-block;
-  width:300px;
-  margin-right:-350px;
+  display: inline-block;
+  width: 300px;
+  margin-right: -350px;
 }
 
 .inline-margin-right {
-  vertical-align:top;
-  display:inline-block;
-  margin-left:396px;
-  margin-right:-46px;
+  vertical-align: top;
+  display: inline-block;
+  margin-left: 396px;
+  margin-right: -46px;
   justify-content: space-around;
   
 }
-
-
-/* .inline-margin-parent {
-  text-align:left;
-  
-  }
-  .inline-margin-left {
-    display:inline-block;
-    width:300px;
-    margin-right:-310px;
-  }
-  
-  .inline-margin-right {
-    display:inline-block;
-    margin-left:100px;
-    padding-left:280px;
-    text-align:left;
-  } */
