--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -1,5 +1,105 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.transition {
+  height: 333px;
+  width: 500px;
+  margin: 0 auto;
+  overflow: hidden;
+}
 
+.q8wrapper {  
+  position: relative;
+}
+
+.q8wrapper:hover >.carpeg {
+  transition: 0.5s;
+  transform: scale(1.5,1.5);
+}
+
+.q8wrapper:hover >.commentary {
+  transition: 0.5s;
+  transform: rotate(0deg);
+
+}
+
+.black-cover {
+  position: absolute;
+  height: 485px;
+  width: 500px;
+  padding-top: 200px;
+}
+
+.q8wrapper:hover >.black-cover {
+  position: absolute;
+  transition: 0.5s;
+  transform: translate(0px,-162px);
+  background: linear-gradient(to top, rgba(0,0,0,8), rgba(0,0,0,0));
+}
+
+.commentary {
+ transition: 0.5s;
+  position: absolute;
+  padding: 20px;
+  line-height: 16px;
+  font-size: 16px;
+  top: 50%;
+  color: white;
+  word-break: break-all;
+}
+
+.carpeg {
+  transition: 0.5s;
+  position: absolute;
+}
+
+.main-circle {
+  margin: 0 auto;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: #ecf1f2;
+  padding: 10px;
+  position: relative;
+  overflow: hidden;
+}
+
+.blue-part {
+  height: 100px;
+  width: 100px;
+  background-color: #00bcd4;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  transform-origin: 0% 0%;
+  animation-name: rotation;
+  animation-duration: 1.1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.in-circle {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: white;
+  z-index: 3;
+}
+
+@keyframes rotation {
+  0%{
+    transform: rotate(0deg);
+  }
+  50%{
+    transform: rotate(180deg);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
+
+
+/*  */
 /* 回答はここに書いてね */
