--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -10,6 +10,7 @@
 
 .q8wrapper {  
   position: relative;
+  height:100%;
 }
 
 .q8wrapper:hover >.carpeg {
@@ -17,33 +18,28 @@
   transform: scale(1.5,1.5);
 }
 
-.q8wrapper:hover >.commentary {
-  transition: 0.5s;
-  transform: rotate(0deg);
-
-}
 
 .black-cover {
+  transition: 0.5s;
   position: absolute;
-  height: 485px;
-  width: 500px;
-  padding-top: 200px;
+  height:100%;
+  width:100%;
+  background: linear-gradient(to top, rgba(0,0,0,.8), rgba(0,0,0,0));
+  bottom:-100%;
 }
 
 .q8wrapper:hover >.black-cover {
   position: absolute;
-  transition: 0.5s;
-  transform: translate(0px,-162px);
-  background: linear-gradient(to top, rgba(0,0,0,8), rgba(0,0,0,0));
+  bottom:0;
 }
 
 .commentary {
- transition: 0.5s;
   position: absolute;
+  transition: 0.5s;
   padding: 20px;
   line-height: 16px;
   font-size: 16px;
-  top: 50%;
+  bottom:0;
   color: white;
   word-break: break-all;
 }
@@ -53,6 +49,20 @@
   position: absolute;
 }
 
+
+.main-circle{
+  border-radius:50%;
+  border:solid #ecf1f2 10px;
+  border-top:solid #00bcd4 10px;
+  height:100px;
+  width:100px;
+  margin:0 auto;
+  animation:rotation;
+  animation-duration: 1.1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+/* 
 .main-circle {
   margin: 0 auto;
   height: 100px;
@@ -86,7 +96,7 @@
   border-radius: 50%;
   background-color: white;
   z-index: 3;
-}
+} */
 
 @keyframes rotation {
   0%{
