--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -10,57 +10,64 @@
 
 .q8wrapper {  
   position: relative;
-  height:100%;
 }
 
 .q8wrapper:hover >.carpeg {
-  transition: 0.5s;
-  transform: scale(1.5,1.5);
+  transform: scale(1.5);
 }
 
 
 .black-cover {
   transition: 0.5s;
   position: absolute;
-  height:100%;
-  width:100%;
+  height: 100%;
+  width: 100%;
   background: linear-gradient(to top, rgba(0,0,0,.8), rgba(0,0,0,0));
-  bottom:-100%;
+  bottom: -100%;
+  left: 0;
 }
 
 .q8wrapper:hover >.black-cover {
   position: absolute;
-  bottom:0;
+  bottom: 0;
+  left: 0;
 }
 
 .commentary {
   position: absolute;
-  transition: 0.5s;
   padding: 20px;
   line-height: 16px;
   font-size: 16px;
-  bottom:0;
+  bottom: 0;
   color: white;
   word-break: break-all;
 }
 
 .carpeg {
   transition: 0.5s;
-  position: absolute;
 }
 
 
-.main-circle{
-  border-radius:50%;
-  border:solid #ecf1f2 10px;
-  border-top:solid #00bcd4 10px;
-  height:100px;
-  width:100px;
-  margin:0 auto;
-  animation:rotation;
+.main-circle {
+  border-radius: 50%;
+  border: solid #ecf1f2 10px;
+  border-top: solid #00bcd4 10px;
+  height: 100px;
+  width: 100px;
+  margin: 0 auto;
+  animation: rotation 1.1s linear infinite;
+  /* animation: rotation;
   animation-duration: 1.1s;
   animation-timing-function: linear;
-  animation-iteration-count: infinite;
+  animation-iteration-count: infinite; */
+}
+@keyframes rotation {
+  0%{
+    transform: rotate(0deg);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
 }
 /* 
 .main-circle {
@@ -97,18 +104,6 @@
   background-color: white;
   z-index: 3;
 } */
-
-@keyframes rotation {
-  0%{
-    transform: rotate(0deg);
-  }
-  50%{
-    transform: rotate(180deg);
-  }
-  100%{
-    transform: rotate(360deg);
-  }
-}
 
 
 /*  */
